--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,40 @@
 @import "tailwindcss";
 
+@theme {
+  /* Font Family */
+  --font-family-primary: "Poppins", sans-serif;
+
+  /* Custom Screens */
+  --breakpoint-xl: 1440px;
+
+  /* Custom Colors */
+  --color-primary: #222222;
+  --color-secondary: #f5e6e0;
+}
+
+/* Container padding customization */
+.container {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+@media (min-width: 1024px) {
+  .container {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+/* Background image */
+.bg-hero {
+  background-image: url("./img/bghero.jpg");
+}
+
 html {
   scroll-behavior: smooth;
 }
 
 body {
-  background-color: #0e0f1c;
+  font-family: var(--font-family-primary);
+  color: var(--color-primary);
 }
